[tool.poetry]
name = "repl_python3_pokemon-calculator"
version = "0.1.0"
description = ""
authors = ["13Dev <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
